# fzdb

./: .gitignore  .travis.yml  CMakeLists.txt  CommandInterpreter.cpp  CommandInterpreter.h  Doxyfile  Job.h  JobFactory.cpp  JobFactory.h  JobQueue.cpp  Logger.h  Makefile  README.md  Vagrantfile  biicode.conf  build.bat  fuzzy-database.sublime-project  main.cpp  npmTestPermErrorLog.txt  package.json  platform.h  sampleQuerySpec.js  server.cpp  server.h  session.cpp  session.h  userFile.json
GoogleTest/: GoogleTest.vcxproj  GoogleTest.vcxproj.filters
benchmarks/: CMakeLists.txt  main.cpp
bii/: .hive.db  layout.bii  settings.bii
build_modules/: boost-nowide.cmake  boost.cmake  gbenchmark.cmake  gmock.cmake  gtest.cmake  pthreads.cmake  rapidjson.cmake  spdlog.cmake  vedis.cmake
frontend/: cli.py  hierarchy.fuz  hierarchy1.fuz  hierarchy2.fuz  liverpool.fuz  liverpool_hierarchies.fuz  liverpool_person.fuz  load.py  sendfile.js  server.js  simpsons.fuz  simpsons_foaf.fuz  simpsons_meta.fuz  tel.js
frontend/public/: index.html  terminal.css
jobs/: Echo.h  Unknown.h
model/: EntityProperty.cpp  EntityProperty.h  PropertyValue.cpp  PropertyValue.h  Variant.cpp  Variant.h
scripts/: linux_config.cnf  linux_daemon.sh  linux_install.sh  meta_test.fuz  profile.sh  vagrant_provisioning.sh
scripts/flamegraph/: flamegraph.pl  stackcollapse-perf.pl
service/: CMakeLists.txt  sample_service.cc  sample_service.h  service_base.cc  service_installer.cc  service_main.cc  windows_service.cc
spec/: 1000Entities2PropQuerySpec.js  125Entities2PropQuerySpec.js  16000Entities2PropQuerySpec.js  2000Entities2PropQuerySpec.js  250Entities2PropQuerySpec.js  32000Entities2PropQuerySpec.js  32000Entities4PropQuerySpec.js  4000Entities2PropQuerySpec.js  50000Entities2PropQuerySpec.js  50000Entities4PropQuerySpec.js  500Entities2PropQuerySpec.js  8000Entities2PropQuerySpec.js  UserQuerySpec.js  deleteQuerySpec.js  filterQuerySpec.js  finalQueryFormSpec.js  hierarchyQuerySpec.js  historicalDataSpec.js  jonsBugsQuerySpec.js  largeQuerySpec.js  linkQuerySpec.js  mergeQuerySpec.js  metaQuerySpec.js  missingValuesQuerySpec.js  reusingVariablesSpec.js  sampleQuerySpec.js  scanQuerySpec.js  testDatesSpec.js  unicodeSpec.js
spec/data/: 1000Entities2Properties.fuz  125Entities2Properties.fuz  16000Entities2Properties.fuz  2000Entities2Properties.fuz  250Entities2Properties.fuz  32000Entities2Properties.fuz  4000Entities2Properties.fuz  50000Entities2Properties.fuz  500Entities2Properties.fuz  8000Entities2Properties.fuz  large_150.fuz  liverpool.fuz  liverpool.ttl  liverpool_full.fuz  simpsons.fuz  simpsons_meta.fuz
spec/support/: generator.js  helper.js  jasmine.json
src/: BaseQueryResult.cpp  BaseQueryResult.h  CommandInterpreter.cpp  CommandInterpreter.h  Exceptions.h  FileSystem.cpp  FileSystem.h  ISession.h  Job.cpp  Job.h  Job.h.t  JobFactory.cpp  JobFactory.h  JobQueue.cpp  JobQueue.h  Logger.h  Parser.cpp  Parser.cpp.t  Parser.h  QueryResult.cpp  QueryResult.h  QueryResults.cpp  QueryResults.h  Util.cpp  Util.cpp.t  Util.h  VariableSet.cpp  VariableSet.h  base_query_result.cc  base_query_result.h  command_interpreter.cc  command_interpreter.cpp  command_interpreter.h  exceptions.h  file_system.cc  file_system.cpp  file_system.h  isession.h  job.cc  job.h  (+23 more)
src/filters/: IFilter.h  OrderingFilters.h  RegexFilter.h  ifilter.h  lev_filter.h  ordering_filters.h  regex_filter.h
src/jobs/: AddUserJob.cpp  AddUserJob.h  AdminJobs.h  BGP.cpp  BGP.h  BGP.h.t  CreateEntityJob.cpp  CreateEntityJob.h  DebugDumpEntities.cpp  DebugDumpEntities.h  DebugJob.cpp  DebugJob.h  DebugLoadFile.cpp  DebugLoadFile.h  DebugSaveFile.cpp  DebugSaveFile.h  DebugSerialise.cpp  DebugSerialise.h  DebugSerialiseJob.cpp  DebugSerialiseJob.h  Delete.cpp  Delete.h  Delete.h.t  DeleteUserJob.cpp  DeleteUserJob.h  DemoteAdminJob.cpp  DemoteAdminJob.h  Echo.cpp  Echo.h  Flush.cpp  Flush.h  IUserAdminJobs.cpp  IUserAdminJobs.h  Insert.cpp  Insert.h  Insert.h.t  Link.cpp  Link.h  Link.h.t  LoadFileJob.cpp  (+74 more)
src/model/: Database.cpp  Database.h  Database.h.t  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityManagerQueries.cpp  EntityProperty.cpp  EntityProperty.h  EntitySerialiser.cpp  EntitySerialiser.h  GraphSerialiser.cpp  GraphSerialiser.h  ILogString.h  ISerialisable.h  MemberSerialiser.cpp  MemberSerialiser.h  PrimitiveMapSerialiser.cpp  PrimitiveMapSerialiser.h  PropertyOwner.cpp  PropertyOwner.h  PropertyOwnerSerialiser.cpp  PropertyOwnerSerialiser.h  PropertyValue.cpp  PropertyValue.h  QuerySettings.h  Serialiser.cpp  Serialiser.h  SimpleLock.h  StringMapSerialiser.cpp  StringMapSerialiser.h  Triple.cpp  Triple.h  TypeSerialiser.cpp  TypeSerialiser.h  Variant.cpp  Variant.h  database.cc  database.h  (+35 more)
src/types/: AuthorID.cpp  AuthorID.h  Base.cpp  Base.h  Base.h.t  Confidence.cpp  Confidence.h  Date.h  EntityRef.cpp  EntityRef.h  Int.h  Int.h.t  Property.cpp  Property.h  SourceRef.cpp  SourceRef.h  String.h  String.h.t  SubType.h  TimeStamp.h  TimeStamp.h.t  TypeID.cpp  TypeID.h  UInt.cpp  UInt.h  UInt.h.t  ValueRef.h  author_id.cc  author_id.h  base.cc  base.h  confidence.cc  confidence.cpp  confidence.h  date.h  entity_ref.cc  entity_ref.h  int.h  ordered_type.h  property.cc  (+12 more)
src/user/: Encryption.cpp  Encryption.h  Hashing.cpp  Hashing.h  (+24 more)
tests/: Addition.cpp  Addition.h  AdditionTest.cpp  CMakeLists.txt  Cubic.cpp  DateTest.cpp  EncryptionTest.cpp  Factorial.h  FactorialTest.cpp  HashingTest.cpp  MockTest.cpp  Multiply.cpp  Multiply.h  ParserTest.cpp  PermissionTest.cpp  QuadraticEquation.cpp  QuadraticEquation.h  QuadraticEquationTest.cpp  SerialisationTest.cpp  UnitTests.cpp  date_test.cc  mock_test.cc  serialisation_test.cc
tests/misc/: Cubic.h  CubicTest.cpp  Factorial.cpp  HashingTest.cpp  MultiplyTest.cpp
tests/model/: EntityTest.cpp
tests/user/: PermissionTest.cpp  UserFileOperationsTest.cpp  UserFileOperationsTest.cpp.exclude  UserFileOperationsWrapper.cpp  UserFileOperationsWrapper.cpp.exclude  UserFileOperationsWrapper.h  UserOperationTest.cpp  permission_test.cc  user_operation_test.cc
(+13 files in other folders)
